# audio-recorder

./: .gitignore  DOCUMENTACAO.md  README.md  ROADMAP.md  config.toml  pyproject.toml
src/audio_recorder/audio/: mixer.py
src/audio_recorder/capture/: __init__.py  base.py  factory.py  loopback_linux.py  loopback_mac.py  loopback_win.py  mic.py
src/audio_recorder/cli/: cli.py
src/audio_recorder/config/: __init__.py  defaults.toml  settings.py
src/audio_recorder/diarization/: __init__.py  engine.py
src/audio_recorder/gui/: app.py  history_window.py  main_window.py  settings_window.py
src/audio_recorder/gui/widgets/: __init__.py  transcript_view.py  waveform.py
src/audio_recorder/gui/workers/: minutes_worker.py  retranscribe_worker.py
src/audio_recorder/merge/: __init__.py  formatter.py  merger.py
src/audio_recorder/persistence/: database.py
src/audio_recorder/session/: __init__.py  session.py  state.py  wav_writer.py
src/audio_recorder/summarization/: engine.py
src/audio_recorder/transcription/: __init__.py  engine.py  pipeline.py  segment.py
src/audio_recorder/utils/: __init__.py  platform.py  timestamp.py
src/audio_recorder/vad/: __init__.py  silero.py
tests/: test_formatter.py  test_merger.py  test_persistence.py  test_timestamp.py
