[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-recorder"
version = "0.1.0"
description = "Desktop audio recorder with real-time transcription and diarization"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
    "PySide6>=6.7.0",
    "faster-whisper>=1.0.0",
    "silero-vad>=5.1.2",
    "pyannote.audio>=3.1.0",
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
]

[project.scripts]
audio-recorder = "audio_recorder.cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_recorder"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
